# simple-player-qt

./: .gitignore  CHECKUP_REPORT.md  CMakeLists.txt  LICENSE  README.md  resources.qrc
src/: mainwindow.cpp  mainwindow.h  metadata.cpp  metadata.h  mpris2.cpp  mpris2.h  playlistmodel.cpp  playlistmodel.h
